# ajax-security-hass

./: CHANGELOG.md  README.md  debug_unknown_devices.py  docker-compose.yml  hacs.json  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  release.yml
custom_components/ajax/: __init__.py  alarm_control_panel.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  event_parser.py  manifest.json  models.py  number.py  select.py  sensor.py  services.yaml  sqs_client.py  sqs_manager.py  switch.py
custom_components/ajax/devices/: __init__.py  door_contact.py  flood_detector.py  glass_break.py  hub.py  light.py  motion_detector.py  relay.py  siren.py  smoke_detector.py  socket.py
custom_components/ajax/translations/: en.json  es.json  fr.json
custom_components/ajax/v1/auth/: auth_service_endpoints_pb2.py  auth_service_endpoints_pb2_grpc.py  context_service_endpoints_pb2.py  context_service_endpoints_pb2_grpc.py  login_request_pb2.py  login_request_pb2.pyi  login_request_pb2_grpc.py  login_response_pb2.py  login_response_pb2.pyi  login_response_pb2_grpc.py  login_token_request_pb2.py  login_token_request_pb2.pyi  login_token_request_pb2_grpc.py  switch_context_request_pb2.py  switch_context_request_pb2.pyi  switch_context_request_pb2_grpc.py
custom_components/ajax/v1/common/: access_rights_pb2.py  access_rights_pb2.pyi  access_rights_pb2_grpc.py  address_pb2.py  address_pb2.pyi  address_pb2_grpc.py  company_pb2.py  company_pb2.pyi  company_pb2_grpc.py  email_address_pb2.py  email_address_pb2.pyi  email_address_pb2_grpc.py  group_permissions_pb2.py  group_permissions_pb2.pyi  group_permissions_pb2_grpc.py  hub_index_pb2.py  hub_index_pb2.pyi  hub_index_pb2_grpc.py  hub_user_pb2.py  hub_user_pb2.pyi  hub_user_pb2_grpc.py  image_chunk_pb2.py  image_chunk_pb2.pyi  image_chunk_pb2_grpc.py  image_pb2.py  image_pb2.pyi  image_pb2_grpc.py  image_urls_pb2.py  image_urls_pb2.pyi  image_urls_pb2_grpc.py  logo_pb2.py  logo_pb2.pyi  logo_pb2_grpc.py  notification_channel_pb2.py  notification_channel_pb2.pyi  notification_channel_pb2_grpc.py  notification_settings_pb2.py  notification_settings_pb2.pyi  notification_settings_pb2_grpc.py  permission_pb2.py  (+14 more)
custom_components/ajax/v1/company/: employee_pb2.py  employee_pb2.pyi  employee_pb2_grpc.py
custom_components/ajax/v1/error/: error_pb2.py  error_pb2.pyi  error_pb2_grpc.py
(+4828 files in other folders)
